src/test/deca/context/valid/ClassMathode27.deca
// Description:
//    plusieurs class et methode
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
class Methode1{  
    int a=1;
    int b=1;
    boolean c=true;
    boolean d=false;
    boolean methode(){
        return ((c || d )&& (a==b));
    }
    
 
}

{
    Methode1 m=new Methode1();
    if(m.methode()){
        print("yes");
    }
    

}
