src/test/deca/context/invalid/redefintion3.deca
// Description:
//    redefinition
//
// Resultats:
//     no viable alternative at input 'a'
// 
// Historique:
//    cree le 01/01/2022

{
    int a=5;
    if(true){
        int a=1;
    }

}